[package]
name = "rustywitness"
version = "0.1.0"
edition = "2021"
authors = ["swanandx"]
description = "A CLI tool for getting screenshots of URLs using headless chrome"
readme = "README.md"
repository = "https://github.com/swanandx/rustywitness"
homepage = "https://github.com/swanandx/rustywitness"
license = "MIT"
keywords = ["bug-bounty", "chrome", "recon", "screenshot", "web"]
categories = ["accessibility", "command-line-utilities", "asynchronous"]
documentation = "https://docs.rs/rustywitness"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
url = "2.2.2"
reqwest = "0.11.4"
futures = "0.3.17"
once_cell = "1.8.0"
which = "4.2.2"
colored = "2.0.0"
tokio = { version = "1.12.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[profile.release]
lto = true
panic = "abort"
