[package]
name = "rustywitness"
version = "0.1.0"
edition = "2021"
authors = ["swanandx"]
description = "A CLI tool for getting screenshots of URLs using headless chrome"
readme = "README.md"
repository = "https://github.com/swanandx/rustywitness"
homepage = "https://github.com/swanandx/rustywitness"
license = "MIT"
keywords = ["bug-bounty", "chrome", "recon", "screenshot", "web"]
categories = ["accessibility", "command-line-utilities", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
url = "2.3.1"
reqwest = "0.11.16"
tokio = { version = "1", features = ["full"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
futures = "0.3.28"

[profile.release]
lto = true
panic = "abort"
